--- a/EvoSim/EvoSim.vcxproj.filters
+++ b/EvoSim/EvoSim.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Genome.cpp">
@@ -23,7 +23,18 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="EvoSim.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="EvoSim.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="Genome.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Nucleotide.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Search.h">
