Added generation of Attribute from gene

--- a/EvolutionarySimulation/EvolutionarySimulation.vcxproj
+++ b/EvolutionarySimulation/EvolutionarySimulation.vcxproj
@@ -142,10 +142,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Attribute.cpp" />
     <ClCompile Include="Genome.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Attribute.h" />
     <ClInclude Include="Genome.h" />
     <ClInclude Include="Search.h" />
   </ItemGroup>
