--- a/EvolutionarySimulation/EvolutionarySimulation.vcxproj.filters
+++ b/EvolutionarySimulation/EvolutionarySimulation.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Attribute.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Organism.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Genome.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Attribute.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Organism.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
