--- a/EvolutionarySimulation/EvolutionarySimulation.vcxproj
+++ b/EvolutionarySimulation/EvolutionarySimulation.vcxproj
@@ -146,11 +146,13 @@
     <ClCompile Include="Genome.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Organism.cpp" />
+    <ClCompile Include="Population.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Attribute.h" />
     <ClInclude Include="Genome.h" />
     <ClInclude Include="Organism.h" />
+    <ClInclude Include="Population.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
